--- a/blogApp/app/views/blogs/index.html.erb
+++ b/blogApp/app/views/blogs/index.html.erb
@@ -1,5 +1,26 @@
 <div class="contents row" >
-  <% @blogs.each do |blog| %>
-    <p><%= blog.content %></p>
-  <% end %>
+<% @blogs.each do |blog| %>
+  <p><%= blog.content %></p>
+    <% if true %>
+      <div class = "more">
+        <ul class = "more_list">
+          <li>
+            <%= link_to '詳細', "/blogs/#{blog.id}", method: :get %>
+          </li>
+          <li>
+            <%= link_to '編集', "/blogs/#{blog.id}/edit", method: :get %>
+          </li>
+          <li>
+            <%= link_to '削除', "/blogs/#{blog.id}", method: :delete %>
+          </li>
+        </ul>
+      </div>
+    <% end %>
+      <%= simple_format(blog.content) %>
+     <span class="name">
+        <a href="/users/<%= blog.user_id %>">
+          <span>投稿者</span><%= blog.user.nickname %>
+        </a>
+     </span>
+<% end %>
 </div>
