--- a/blogApp/app/views/layouts/application.html.erb
+++ b/blogApp/app/views/layouts/application.html.erb
@@ -5,10 +5,44 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
+    <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+
+  <script
+    src="https://code.jquery.com/jquery-3.3.1.js"
+    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous"></script>
+
 </head>
 <body>
 
+  <nav class= "#ff9800 orange">
+    <div class="nav-wrapper">
+      <a href="#" class="title">Blog App</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="sass.html">ログイン</a></li>
+        <li><a href="badges.html">ログアウト</a></li>
+        <li><a href="collapsible.html">新規登録</a></li>
+      </ul>
+    </div>
+  </nav>
+
+
+
+
+
+
+
+
 <%= yield %>
+
+
+
+<script type="text/javascript" src="./app.js"></script>
 
 </body>
 </html>
