--- a/blogApp/app/views/blogs/edit.html.erb
+++ b/blogApp/app/views/blogs/edit.html.erb
@@ -1,10 +1,10 @@
 <div class="contents row">
   <%= form_tag("/blogs/#{@blog.id}", method: :patch ) do %>
-    <h3>
+    <h5>
       編集する
-    </h3>
+    </h5>
     <input placeholder="title" type="text" name="name" value="<%= @blog.name %>" autofocus="true">
-    <textarea cols="30" name="content" placeholder="text" rows="10"><%= @tweet.text %></textarea>
-    <input type="submit" value="SENT">
+    <textarea cols="30" name="content" placeholder="text" rows="10"><%= @blog.content%></textarea>
+    <input type="submit" value="完了">
   <% end %>
 </div>
