--- a/blogApp/app/views/blogs/index.html.erb
+++ b/blogApp/app/views/blogs/index.html.erb
@@ -1,26 +1,60 @@
-<div class="contents row" >
-<% @blogs.each do |blog| %>
-  <p><%= blog.content %></p>
-    <% if true %>
-      <div class = "more">
-        <ul class = "more_list">
-          <li>
-            <%= link_to '詳細', "/blogs/#{blog.id}", method: :get %>
-          </li>
-          <li>
-            <%= link_to '編集', "/blogs/#{blog.id}/edit", method: :get %>
-          </li>
-          <li>
-            <%= link_to '削除', "/blogs/#{blog.id}", method: :delete %>
-          </li>
-        </ul>
-      </div>
-    <% end %>
-      <%= simple_format(blog.content) %>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Sample</title>
+  <style type="text/css" href="./style.css"></style>
+
+  <script
+  src="https://code.jquery.com/jquery-3.3.1.js"
+  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+  crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+
+  <script type="text/javascript" src="./app.js"></script>
+
+
+  <div class="contents row" >
+    <% @blogs.each do |blog| %>
+        <div class = "more">
+
+          <div class="col s12 m7">
+        <!--     <h2 class="header">Horizontal Card</h2> -->
+            <div class="card horizontal">
+              <div class="card-image">
+        <!--         <img src="https://lorempixel.com/100/190/nature/6"> -->
+              </div>
+                <div class="card-stacked">
+                  <div class="card-content">
+                    <a href=/blogs/<%= blog.id %>"><span><%= blog.name %></span></a>
+                  </div>
+                    <div class="card-action">
+                      <ul class = "more_list">
+                        <li><%= link_to '[このブログを読む]', "/blogs/#{blog.id}", method: :get %></li>
+                         <li><a href="/users/<%= blog.user_id %>"><span>(投稿者)</span><%= blog.user.nickname %></a></li>
+                          <% if user_signed_in? && current_user.id == blog.user_id %>
+                    <!--     <li><%= link_to '[編集]', "/blogs/#{blog.id}/edit", method: :get %></li>
+                        <li><%= link_to '[削除]', "/blogs/#{blog.id}", method: :delete %></li> -->
+
+                        <% end %>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+          </div>
+        </div>
+
+<!--       <%= simple_format(blog.content) %>
      <span class="name">
-        <a href="/users/<%= blog.user_id %>">
-          <span>投稿者</span><%= blog.user.nickname %>
-        </a>
-     </span>
+
+     </span> -->
 <% end %>
 </div>
+</body>
+</html>
