--- a/blogApp/app/views/blogs/new.html.erb
+++ b/blogApp/app/views/blogs/new.html.erb
@@ -1,9 +1,7 @@
 <div class="contents row">
   <div class= "container">
     <%= form_tag('/blogs', method: :post) do %>
-      <h4>
-        投稿する
-      </h4>
+      <h5>投稿する</h5>
       <input placeholder="blog title" type="text" name="name" autofocus="true">
       <textarea placeholder="content" name="content" cols="30" rows="50"></textarea>
       <input type="submit" value="投稿する">
