--- a/blogApp/app/views/devise/registrations/new.html.erb
+++ b/blogApp/app/views/devise/registrations/new.html.erb
@@ -4,6 +4,11 @@
       <%= devise_error_messages! %>
 
       <div class="field">
+        <%= f.label :nickname %> <em>(6 characters maximum)</em><br />
+        <%= f.text_field :nickname, autofocus: true, maxlength: "6" %>
+      </div>
+
+      <div class="field">
         <%= f.label :email %><br />
         <%= f.email_field :email %>
       </div>
@@ -23,7 +28,7 @@
       </div>
 
       <div class="actions">
-        <%= f.submit "Sign up" %>
+        <%= f.submit "登録" %>
       </div>
     <% end %>
   </div>
