--- a/blogApp/app/views/layouts/application.html.erb
+++ b/blogApp/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 </head>
 <body>
 
-  <nav class= "#ff9800 orange">
+  <nav class= "#ff9800 blue">
     <div class="nav-wrapper">
       <a href="/" class="brand-logo center">Blog App</a>
       <% if user_signed_in? %>
@@ -28,7 +28,7 @@
           <!-- <span><%= current_user.nickname %> -->
             <ul id="nav-mobile" class="right hide-on-med-and-down">
               <li><a class="post" href="/blogs/new">投稿する</a></li>
-              <li><a href="/users/<%= current_user.id%>">マイページ</a></li>
+              <li><a href="/users/<%= current_user.id%>"><%= @nickname %>マイページ</a></li>
               <li><%= link_to "ログアウト", destroy_user_session_path, method:  :delete %></li>
             </ul>
        </div>
@@ -38,6 +38,7 @@
           <li><%= link_to "ログイン", new_user_session_path, class: 'post' %></li>
         </ul>
       <% end %>
+    </div>
   </nav>
 
 
@@ -52,5 +53,8 @@
 
 <script type="text/javascript" src="./app.js"></script>
 
+
 </body>
+
 </html>
+
