--- a/blogApp/app/views/blogs/show.html.erb
+++ b/blogApp/app/views/blogs/show.html.erb
@@ -1,23 +1,31 @@
 <div class ="contents row">
   <div class="content_post" >
-    <% if user_signed_in? && current_user.id == @blog.user_id %>
-      <div class="more">
-        <span><%= image_tag 'arrow_top.png' %></span>
-      <ul class="more_list">
-        <li>
-          <%= link_to '編集', "/blogs/#{@blog.id}/edit", method: :get %>
-        </li>
-        <li>
-          <%= link_to '削除', "/blogs/#{@blog.id}", method: :delete %>
-        </li>
-      </ul>
+
+    <div class="col s12 m7">
+
+      <div class="card horizontal">
+        <div class="card-stacked">
+          <h6 class="card-content">ブログタイトル：<%= @blog.name %></h6>
+            <div class="card-action">
+              <span>本文：<%= @blog.content %></span>
+                  <% if user_signed_in? && current_user.id == @blog.user_id %>
+                      <ul class="more_list">
+                        <li><%= link_to '編集', "/blogs/#{@blog.id}/edit", method: :get %></li>
+                        <li><%= link_to '削除', "/blogs/#{@blog.id}", method: :delete %></li>
+                      </ul>
+                  <% end %>
+              </span>
+            </div>
+        </div>
+      </div>
     </div>
-    <% end %>
-    <%= simple_format(@blog.content) %>
-    <span class="name">
-      <a href="/users/<%= @blog.user.id %>">
-        <span>投稿者</span><%= @blog.user.nickname %>
-      </a>
-    </span>
+
+
+<!--     <%= simple_format(@blog.content) %>
+    <span class="name"> -->
+<!--       <a href="/users/<%= @blog.user.id %>">
+        <span>投稿者</span><%= @blog.user.nickname %> -->
+<!--       </a>
+    </span> -->
   </div>
 </div>
