--- a/blogApp/app/views/blogs/index.html.erb
+++ b/blogApp/app/views/blogs/index.html.erb
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Sample</title>
-  <style type="text/css" href="./style.css"></style>
+  <head>
+    <title>Sample</title>
+    <style type="text/css" href="./style.css"></style>
 
-  <script
-  src="https://code.jquery.com/jquery-3.3.1.js"
-  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-  crossorigin="anonymous"></script>
-</head>
+    <script
+    src="https://code.jquery.com/jquery-3.3.1.js"
+    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous"></script>
+  </head>
 
-<body>
-  <!-- Compiled and minified CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+  <body>
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 
-  <!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 
-  <script type="text/javascript" src="./app.js"></script>
+    <script type="text/javascript" src="./app.js"></script>
 
+  </body>
 
   <div class="contents row" >
     <% @blogs.each do |blog| %>
@@ -28,8 +29,7 @@
               <div class="card-image">
                 <div class="card-stacked">
                   <div class="card-content">
-                    <h5>「<%= blog.name %>」</h5>
-                       (投稿者)<%= blog.user.nickname %>
+                    <h5>「<%= blog.name %>」</h5>(投稿者)<%= blog.user.nickname %>
                       <div class="card-action">
                         <ul class = "more_list">
                           <li><%= link_to '[このブログを読む]', "/blogs/#{blog.id}", method: :get %></li>
@@ -46,8 +46,6 @@
       </div>
     </div>
     <% end %>
-          </div>
-        </div>
   </div>
-</body>
+
 </html>
