--- a/blogApp/app/views/blogs/show.html.erb
+++ b/blogApp/app/views/blogs/show.html.erb
@@ -16,6 +16,25 @@
                   <% end %>
               </span>
             </div>
+              <div class="container">
+              <% if current_user %>
+                <%= form_tag("/blogs/#{@blog.id}/comments", method: :post) do %>
+                  <textarea cols="30" name="text" placeholder="コメントする" rows="2"></textarea>
+                  <input type="submit" value="コメント">
+                <% end %>
+              <% end %>
+                  <div class="comments">
+                  <h4>＜コメント一覧＞</h4>
+                  <% if @comments %>
+                    <% @comments.each do |comment| %>
+                      <p>
+                        <strong><%= link_to comment.user.nickname, "/users/#{comment.user_id}" %>：</strong>
+                        <%= comment.text %>
+                      </p>
+                    <% end %>
+                  <% end %>
+                   </div>
+              </div>
         </div>
       </div>
     </div>
