--- a/blogApp/app/views/layouts/application.html.erb
+++ b/blogApp/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 </head>
 <body>
 
-  <nav class= "#ff9800 blue">
+  <nav class= "#ff9800 green">
     <div class="nav-wrapper">
       <a href="/" class="brand-logo center">Blog App</a>
       <% if user_signed_in? %>
