--- a/blogApp/app/views/layouts/application.html.erb
+++ b/blogApp/app/views/layouts/application.html.erb
@@ -20,9 +20,9 @@
 </head>
 <body>
 
-  <nav class= "#ff9800 green">
+  <nav class= "#ff9800 red">
     <div class="nav-wrapper">
-      <a href="/" class="brand-logo center">Blog App</a>
+      <a href="/" class="brand-logo center">ブログ de GOOD DAY!</a>
       <% if user_signed_in? %>
        <div class="user_nav grid-6">
             <ul id="nav-mobile" class="right hide-on-med-and-down">
@@ -53,8 +53,9 @@
 
 <script type="text/javascript" src="./app.js"></script>
 
-
 </body>
+
+
 
 </html>
 
